<resources>
    <string name="app_name">ELegionApp</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="enter">Вход</string>
    <string name="forget_password">Забыл пароль</string>
    <string name="register">Регистрация</string>
    <string name="command_sms">Введите код из SMS, отправленного на номер</string>
    <string name="example_sms">+7911320033</string>
    <string name="notHaveSms">не пришло смс?</string>
    <string name="wrong_login">Введены неверные данные</string>

    <string name="vacation_tomorrow">%s завтра</string>
    <string name="vacation_soon">%s через %d дней</string>
    <string name="vacation_not_soon">%s через несколько недель</string>
    <string name="vacation_plan">уходит</string>
    <string name="vacation_actual">выходит на работу</string>


    <string name="vacation_alert_request">Запрос на возмещение</string>
    <string name="vacation_alert_vacation">Новый запрос</string>
    <string name="form_ok">Добавить</string>
    <string name="goals">Цели</string>
    <string name="tasks">Задачи</string>
    <string name="skills">Навыки</string>


    <string name="development_start_work">Вступил в должность %d.%d.%d</string>

    <string name = "title_development">Мое развитие</string>
    <string name = "title_vacation">Запросы</string>
</resources>