<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style = "@style/back"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:overScrollMode="never">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <TextView
        style="@style/ImportantText"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:text = "Добро пожаловать в"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:src = "@drawable/ic_elegion"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        style="@style/ImportantText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/wrong_login"
        android:id = "@+id/wrong_data"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="invisible"
        android:textColor="@color/wrong_data"
        />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textField"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CommonText"
                    android:layout_width="match_parent"
                    android:id = "@+id/login"
                    android:hint="@string/login"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/textField"
                app:endIconDrawable="@drawable/ic_show_password"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/icon"

                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CommonText"
                    android:layout_width="match_parent"
                    android:id = "@+id/password"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
            <Button
                android:id = "@+id/enter"
                style="@style/EmphasizedButton"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:text = "@string/enter"
                />
        <Button
            android:id = "@+id/forget"
            style="@style/EmphasizedButton"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:text = "@string/forget_password"
            />
    <Button
        android:id = "@+id/register"
        style="@style/CommonButton"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text = "@string/register"
        />
    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

</LinearLayout>