<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingLeft="60dp"
    android:paddingRight="60dp"
    android:overScrollMode="never">

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>
    <TextView
        style="@style/ImportantText"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:gravity="center"
        android:text = "Добро пожаловать в"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:src = "@drawable/ic_elegion"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <TextView
        style="@style/ImportantText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/command_sms"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="visible"
        android:textColor="@color/wrong_data"
        />
    <TextView
        style="@style/ImportantText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/example_sms"
        android:layout_gravity="center"
        android:id = "@+id/phone"
        android:visibility="visible"
        android:textColor="@color/wrong_data"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/numberTextField"
            app:endIconDrawable="@drawable/ic_show_password"

            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/CommonText"
                android:layout_width="match_parent"
                android:id = "@+id/f_1"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/numberTextField"
            app:endIconDrawable="@drawable/ic_show_password"

            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/CommonText"
                android:layout_width="match_parent"
                android:id = "@+id/f_2"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/numberTextField"
            android:layout_weight="1"
            app:endIconDrawable="@drawable/ic_show_password"

            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/CommonText"
                android:layout_width="match_parent"
                android:id = "@+id/f_3"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/numberTextField"
            app:endIconDrawable="@drawable/ic_show_password"

            >
            <com.google.android.material.textfield.TextInputEditText
                style="@style/CommonText"
                android:layout_width="match_parent"
                android:id = "@+id/f_4"
                android:hint="@string/password"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        style="@style/ImportantText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/notHaveSms"
        android:layout_marginBottom="8dp"
        android:layout_gravity="center"
        android:visibility="visible"
        android:textColor="@color/wrong_data"
        />


    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content">
            <Button
                android:id = "@+id/enter"
                style="@style/EmphasizedButton"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:text = "@string/enter"
                />
    </LinearLayout>
    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2"/>

</LinearLayout>